Retrieve/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CaseBrand__c</fullName>
        <label>Case Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Renault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dacia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renault &amp; Dacia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nissan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CaseSubSource__c</fullName>
        <label>Case Sub Source</label>
        <picklist>
            <controllingField>Origin</controllingField>
            <picklistValues>
                <fullName>After Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blogs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Click to Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comm Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dacia Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directors Indications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVE - Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MKT - Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyDacia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyRenault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press - Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renault Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renault Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENAULT MINUTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renault Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Chipre__c</fullName>
        <description>Chipre</description>
        <label>Chipre/Workspace</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Web__c</fullName>
        <label>Company Web</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCase__c</fullName>
        <label>Country Case</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEMO Cntry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iran</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustPerception__c</fullName>
        <label>Customer Perception</label>
        <picklist>
            <picklistValues>
                <fullName>Breakdown/Abnormal Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Staff Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High/Unfair Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numerous Faults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undertaking Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsafe to drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Off Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Spec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustSatisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Fairly Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not At All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreachable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase_Web__c</fullName>
        <description>Date of Purchase web</description>
        <label>Date of Purchase Web</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Seller_Web__c</fullName>
        <label>Dealer Seller Web</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <picklist>
            <controllingField>SubType__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avantime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificates/ Official doc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compact ZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Network Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFLUENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EKANGOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Espace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kangoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kangoo ZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koleos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laguna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAGUNA3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megane3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Brand__c</fullName>
        <inlineHelpText>What is the main product of the customer question ?</inlineHelpText>
        <label>Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Media Nav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-LINK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TomTom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; GO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Details__c</fullName>
        <inlineHelpText>What is the customer’s symptom?</inlineHelpText>
        <label>Symptom</label>
        <picklist>
            <controllingField>Device_Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>Access to phonebook issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account access issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App connection to radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App management information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App management issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App not found in store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App update issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associating vehicles issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio guidance and screen guidance differencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio playback issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto launch issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic switch on/off issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic volume control issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluetooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluetooth activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call control issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call logs issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalog Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central switch issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge battery issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge calendar issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge timer issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging points issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charging station issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Sub_Type__c</fullName>
        <inlineHelpText>What is the functionality concerned by the customer question ?</inlineHelpText>
        <label>Service</label>
        <picklist>
            <controllingField>Device_Type__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air conditionning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android - Google play</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App user guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquarium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio playback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic switch on/off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auxiliary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balumpa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bluetooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call logs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coyote Series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <inlineHelpText>What function is using the customer ?</inlineHelpText>
        <label>Function</label>
        <picklist>
            <controllingField>Device_Brand__c</controllingField>
            <picklistValues>
                <fullName>Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carminat CD/DVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carminat TomTom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carminat TomTom Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer management off board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA NAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multimédia on board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigation on board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part command button</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone on board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD-Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services management off board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services on board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System on board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle on board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocal recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Welcome page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connection Bluetooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Home page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Main menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Navigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Multimedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application - Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_registration_Web__c</fullName>
        <label>First registration Web</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renault Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative / Relation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal representative / Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Techline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transnational Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RENAULT SITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadside Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non garage Renault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Service Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Renault Garage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Web__c</fullName>
        <label>Language Web</label>
        <picklist>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukrainian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_of_Task__c</fullName>
        <description>R-Force:Release  6.2
This last modified date of task is updated in this field</description>
        <label>Last Modified Date of Task</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Modified_Date__c</fullName>
        <description>R-FORCE :Release 6
The case modified date(last activity on case) is populated in this field</description>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Technical_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For CS</description>
        <label>No Technical Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_Dealer_Web__c</fullName>
        <description>R-Force :Release 5.1
This field is created for PORTUGAL to capture dealer details in complaint webform(PT)</description>
        <label>PT_Dealer_Web</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Web__c</fullName>
        <description>Postal code for Web to Case</description>
        <label>Postal Code Web</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing__c</fullName>
        <label>Processing</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authenticity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BID (Bizim için Değerlisiniz)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>car imported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Services Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dokumenty pojazdu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dossier juridique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homologation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Governing Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal investigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD / President escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mec product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Renault Garage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>